--- a/index.html
+++ b/index.html
@@ -213,41 +213,31 @@
           <h2 class="pictures__title title-decor title_dark">
             А можно в картинках?
           </h2>
-          <div class="pictures__card pictures-sunset">
-            <img
-              src="./images/sunset.png"
-              alt="Солнце в закате"
-              class="pictures__card-pic"
-            />
-          </div>
-          <div class="pictures__card pictures-ice-cream">
-            <img
-              src="./images/ice-cream.png"
-              alt="антропоморфный десерт"
-              class="pictures__card-pic"
-            />
-          </div>
-          <div class="pictures__card pictures-tape">
-            <img
-              src="./images/tape.png"
-              alt="аудиокассета 90-х"
-              class="pictures__card-pic"
-            />
-          </div>
-          <div class="pictures__card pictures-books">
-            <img
-              src="./images/books.png"
-              alt="собрание сочинений"
-              class="pictures__card-pic"
-            />
-          </div>
-          <div class="pictures__card pictures-street">
-            <img
-              src="./images/street.png"
-              alt="урбанистический пейзаж"
-              class="pictures__card-pic"
-            />
-          </div>
+          <img
+            src="./images/sunset.png"
+            alt="Солнце в закате"
+            class="pictures__card-pic pictures-sunset"
+          />
+          <img
+            src="./images/ice-cream.png"
+            alt="антропоморфный десерт"
+            class="pictures__card-pic pictures-ice-cream"
+          />
+          <img
+            src="./images/tape.png"
+            alt="аудиокассета 90-х"
+            class="pictures__card-pic pictures-tape"
+          />
+          <img
+            src="./images/books.png"
+            alt="собрание сочинений"
+            class="pictures__card-pic pictures-books"
+          />
+          <img
+            src="./images/street.png"
+            alt="урбанистический пейзаж"
+            class="pictures__card-pic pictures-street"
+          />
         </div>
       </section>
     </main>
